plugins {
	id("io.freefair.lombok")
	id('java-test-fixtures')
	id('eclipse')
	id('java-library')	
}

java {
	withJavadocJar();
	withSourcesJar();
	sourceCompatibility = JavaVersion.VERSION_21
	targetCompatibility = JavaVersion.VERSION_21
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

tasks.named('test') {
	// Use JUnit Platform for unit tests.
	useJUnitPlatform()
	testLogging {
		// テスト時の標準出力と標準エラー出力を表示する
		showStandardStreams = true
		// イベントを出力する (TestLogEvent)
		//events "started", "skipped", "passed", "failed", "standardOut", "standardError"
		events "skipped", "passed", "failed", "standardOut", "standardError"
		// 例外発生時の出力設定 (TestExceptionFormat)
		exceptionFormat = 'full'
	}
	jvmArgs(
		"--add-opens", "java.base/java.lang=ALL-UNNAMED",
		"--add-opens", "java.base/java.util=ALL-UNNAMED"
	)
}

dependencies {
	implementation project(':sqlapp-core')
	implementation project(':sqlapp-command')
	implementation project(':sqlapp-core-test')
	implementation project(':sqlapp-core-db2')
	implementation project(':sqlapp-core-derby')
	implementation project(':sqlapp-core-firebird')
	implementation project(':sqlapp-core-h2')
	implementation project(':sqlapp-core-hirdb')
	implementation project(':sqlapp-core-hsql')
	implementation project(':sqlapp-core-informix')
	implementation project(':sqlapp-core-mariadb')
	implementation project(':sqlapp-core-mdb')
	implementation project(':sqlapp-core-mysql')
	implementation project(':sqlapp-core-oracle')
	implementation project(':sqlapp-core-postgres')
	implementation project(':sqlapp-core-saphana')
	implementation project(':sqlapp-core-sqlite')
	implementation project(':sqlapp-core-sqlserver')
	implementation project(':sqlapp-core-sybase')
	implementation project(':sqlapp-core-symfoware')
	implementation fileTree(dir: 'lib', include: '*.jar')
	//derby
	testImplementation group: 'org.apache.derby', name: 'derby', version: '10.12.1.1'
	//hsql
	testImplementation group: 'org.hsqldb', name: 'hsqldb', version: '2.4.0'
	//firebird
	//testCompile group: 'org.firebirdsql.jdbc', name: 'jaybird-jdk17', version: '2.2.10'
	//postgres
	testImplementation group: 'org.postgresql', name: 'postgresql', version: '42.7.4'
	//mysql
	testImplementation group: 'com.mysql', name: 'mysql-connector-j', version: '9.1.0'
	//sqlite
	testImplementation group: 'org.xerial', name: 'sqlite-jdbc', version: '3.8.11.2'
	//SQL Server
	//implementation group: 'net.sourceforge.jtds', name: 'jtds', version: '1.3.1'
	testImplementation group: 'com.microsoft.sqlserver', name: 'mssql-jdbc', version: '10.2.0.jre11'
	// https://mvnrepository.com/artifact/com.sap.cloud.db.jdbc/ngdbc
	implementation group: 'com.oracle.database.jdbc', name: 'ojdbc11', version: '23.6.0.24.10'
	//
	testImplementation group: 'com.sap.cloud.db.jdbc', name: 'ngdbc', version: '2.14.7'
	testImplementation(platform('org.junit:junit-bom:5.11.3'))
	testImplementation('org.junit.jupiter:junit-jupiter')
	testImplementation('org.junit.jupiter:junit-jupiter-api')
	
	testRuntimeOnly('org.junit.platform:junit-platform-launcher')
	//
	implementation fileTree(dir: 'lib', include: '*.jar')
}
